--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,9 +7,18 @@
 
 /**Boot CSS - vem do bootstrap**/
 
+html,body{
+    overflow-x: hidden;
+    height: 100%;
+}
+
 img{
     width: 100%;
     max-width: 300px;
+}
+
+input{
+    border: 0;
 }
 
 .center{
@@ -40,7 +49,9 @@ img{
     clear: both;
 }
 
+/** -------------------------------------------------------------------- **/
 /** Estilização do site **/
+/** -------------------------------------------------------------------- **/
 
 header{
     padding: 10px 0;
@@ -48,9 +59,14 @@ header{
 }
 
 header .logo{
-    font-size: 23px;
+    font-size: 25px;
     font-weight: 300;
     text-transform: uppercase;
+    color: white;
+}
+
+.logo a{
+    text-decoration: none;
     color: white;
 }
 
@@ -76,6 +92,11 @@ nav.desktop a{
     color: white;
     text-decoration: none;
 }
+
+nav.desktop a:hover{
+    text-decoration: underline;
+}
+/** -------------------------------------------------------------------- **/
 
 section.banner-principal{
     width: 100%;
@@ -135,6 +156,7 @@ section.banner-principal form input[type=submit]{
     border: 0;
 }
 
+/** -------------------------------------------------------------------- **/
 
 section.descricao-autor{
     padding: 30px 0;
@@ -152,6 +174,8 @@ section.descricao-autor p{
     font-weight: 300;
     margin-top: 10px;
 }
+
+/** -------------------------------------------------------------------- **/
 
 section.especialidades{
     padding: 40px 0;
@@ -186,6 +210,8 @@ section.especialidades h2.title{
     font-size: 15px;
     margin-top: 10px;
 }
+
+/** -------------------------------------------------------------------- **/
 
 section.extras{
     padding: 30px 0;
@@ -232,6 +258,8 @@ p.nome-autor{
     font-weight: 300;
 }
 
+/** -------------------------------------------------------------------- **/
+
 footer{
     background: #313462;
     padding: 30px 0;
@@ -242,6 +270,103 @@ footer p{
     text-align: center;
     font-weight: 400;
     font-size: 16px;
+}
+
+footer.fixed{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/** -------------------------------------------------------------------- **/
+
+section.error-404{
+    position: relative;
+    min-height: 600px;
+    padding: 30px 0;
+}
+
+section.error-404 h1{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    text-align: center;
+    color: #555;
+    font-weight: 400;
+    font-size: 40px;
+}
+
+section.error-404 h2{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    text-align: center;
+    color: #444;
+    font-weight: 400;
+}
+
+section.error-404 p{
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    font-size: 16px;
+    color: #444;
+    font-weight: 300;
+}
+
+section.error-404 a{
+    color: #444;
+}
+
+#map{
+    width: 100%;
+    height: 400px;
+}
+
+.contato-container{
+    padding: 40px 0;
+    text-align: center;
+}
+
+.contato-container input[type=text]{
+    margin: 8px 0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #ccc;
+    padding-left: 8px;
+    font-size: 16px;
+    max-width: 700px;
+    color: #444;
+}
+
+.contato-container textarea{
+    padding: 8px;
+    margin: 8px 0;
+    width: 100%;
+    height: 120px;
+    border: 1px solid #ccc;
+    padding-left: 8px;
+    font-size: 16px;
+    max-width: 700px;
+    resize: vertical;
+    color: #444;
+}
+
+.contato-container form input[type=submit]{
+    width: 100%;
+    height: 40px;
+    margin-top: 8px;
+    background: #00C59E;
+    color: white;
+    font-size: 22px;
+    max-width: 700px;
+    cursor: pointer;
 }
 /** -------------------------------------------------------------------- **/
 /** Responsivo **/
